--- a/main.html
+++ b/main.html
@@ -56,7 +56,7 @@
 
     <div class="section contact-info">
         <h2>Contact</h2>
-        <p>Email: dhurkeshmyself@gmail.com</p>
+        <p>Email: <a href="mailto:dhurkeshmyself@gmail.com">dhurkeshmyself@gmail.com</a></p>
         <p>Discord: dhurkeshb</p>
         <p>LinkedIn: <a href="https://linkedin.com/in/dhurkeshb">linkedin.com/in/dhurkeshb</a></p>
         <p>GitHub: <a href="https://github.com/Dhurkesh-B">Github.com/Dhurkesh-B</a></p>
@@ -66,21 +66,6 @@
     <div class="section about">
         <h2>About Me</h2>
         <p>A passionate software engineer with a strong background in machine learning, full-stack development, and containerized application deployment. With hands-on experience in building and deploying AI solutions, I recently secured 3rd place in the 'AI ODYSSEY 1.0' hackathon for developing an innovative deep learning project called 'Mission Potato.' My skill set includes proficiency in Python, TensorFlow, FastAPI, and Streamlit, and I am adept at creating scalable and efficient solutions. I thrive in collaborative environments and am committed to continuous learning and improvement.</p>
-    </div>
-
-    <div class="section certifications">
-        <h2>Certifications and Awards</h2>
-        <ul>
-            <li>NPTEL Python for Data Science</li>
-            <li>Action Plan'23 - Finalist, conducted by IIT Bombay</li>
-            <li>Bag IT Hackathon - Finalist, conducted by TNPCB</li>
-            <li>Twystra'24 - 2nd Place in Paper Presentation</li>
-            <li>Neuronex'24 - 2nd Place in Bug Bash</li>
-            <li>Neo Codeathon March Edition 2024 - 1st Place</li>
-            <li>Neo Codeathon April Edition 2024 - 2nd Place</li>
-            <li>English Elocution Intercollege Event - 3rd Place</li>
-            <li>AI ODYSSEY 1.0 Hackathon - 3rd Place</li>
-        </ul>
     </div>
 
     <div class="section education">
@@ -93,22 +78,6 @@
         <p>Class 10 Percentage: 76.6%</p>
     </div>
 
-    <div class="section skills">
-        <h2>Skills</h2>
-        <p><strong>Technical Skills:</strong></p>
-        <ul>
-            <li>Programming Languages: Python, Java, C++</li>
-            <li>Machine Learning Frameworks: TensorFlow, Keras, PySpark</li>
-            <li>Data Analysis: Pandas, NumPy</li>
-            <li>Data Visualization: Matplotlib, Seaborn</li>
-            <li>DevOps: Docker, Git, GitHub</li>
-        </ul>
-        <p><strong>Soft Skills:</strong></p>
-        <ul>
-            <li>Problem Solving</li>
-            <li>Communication</li>
-        </ul>
-    </div>
 
     <div class="section personal-details">
         <h2>Personal Details</h2>
