--- a/main.html
+++ b/main.html
@@ -57,6 +57,7 @@
     <div class="section contact-info">
         <h2>Contact</h2>
         <p>Email: <a href="mailto:dhurkeshmyself@gmail.com">dhurkeshmyself@gmail.com</a></p>
+         <p>Email id: <a href="mailto:dhurkeshmyself@gmail.com">dhurkeshmyself@gmail.com</a></p>
         <p>Discord: dhurkeshb</p>
         <p>LinkedIn: <a href="https://linkedin.com/in/dhurkeshb">linkedin.com/in/dhurkeshb</a></p>
         <p>GitHub: <a href="https://github.com/Dhurkesh-B">Github.com/Dhurkesh-B</a></p>
@@ -65,7 +66,7 @@
 
     <div class="section about">
         <h2>About Me</h2>
-        <p>A passionate software engineer with a strong background in machine learning, full-stack development, and containerized application deployment. With hands-on experience in building and deploying AI solutions, I recently secured 3rd place in the 'AI ODYSSEY 1.0' hackathon for developing an innovative deep learning project called 'Mission Potato.' My skill set includes proficiency in Python, TensorFlow, FastAPI, and Streamlit, and I am adept at creating scalable and efficient solutions. I thrive in collaborative environments and am committed to continuous learning and improvement.His email id is dhurkeshmyself@gmail.com</p>
+        <p>A passionate software engineer with a strong background in machine learning, full-stack development, and containerized application deployment. With hands-on experience in building and deploying AI solutions, I recently secured 3rd place in the 'AI ODYSSEY 1.0' hackathon for developing an innovative deep learning project called 'Mission Potato.' My skill set includes proficiency in Python, TensorFlow, FastAPI, and Streamlit, and I am adept at creating scalable and efficient solutions. I thrive in collaborative environments and am committed to continuous learning and improvement.</p>
     </div>
 
     <div class="section education">
