--- a/main.html
+++ b/main.html
@@ -32,10 +32,10 @@
             padding: 10px;
             margin: -20px -20px 10px -20px;
         }
-        .contact-info, .education, .skills, .about, .objective, .certifications, .awards, .personal-details {
+        .contact-info, .education, .skills, .about, .objective, .certifications, .awards, .personal-details, .languages, .hobbies-interests {
             margin-bottom: 20px;
         }
-        .contact-info p, .education p, .skills p, .about p, .objective p, .certifications p, .awards p, .personal-details p {
+        .contact-info p, .education p, .skills p, .about p, .objective p, .certifications p, .awards p, .personal-details p, .languages p, .hobbies-interests p {
             margin: 5px 0;
         }
         ul {
@@ -57,10 +57,10 @@
     <div class="section contact-info">
         <h2>Contact</h2>
         <p>Email: <a href="mailto:dhurkeshmyself@gmail.com">dhurkeshmyself@gmail.com</a></p>
-         <p>Email id: <a href="mailto:dhurkeshmyself@gmail.com">dhurkeshmyself@gmail.com</a></p>
         <p>Discord: dhurkeshb</p>
         <p>LinkedIn: <a href="https://linkedin.com/in/dhurkeshb">linkedin.com/in/dhurkeshb</a></p>
         <p>GitHub: <a href="https://github.com/Dhurkesh-B">Github.com/Dhurkesh-B</a></p>
+        <p>Email id: <a href="mailto:dhurkeshmyself@gmail.com">dhurkeshmyself@gmail.com</a></p>
         <p>Location: Chennai</p>
     </div>
 
@@ -79,13 +79,25 @@
         <p>Class 10 Percentage: 76.6%</p>
     </div>
 
-
     <div class="section personal-details">
         <h2>Personal Details</h2>
         <p><strong>Date of Birth:</strong> 30.12.2004</p>
         <p><strong>Native:</strong> Salem District, Attur Taluk, Tamil Nadu</p>
         <p><strong>Blood Group:</strong> B+ve</p>
     </div>
+
+    <div class="section languages">
+        <h2>Languages Spoken</h2>
+        <p>Tamil, English</p>
+    </div>
+
+    <div class="section hobbies-interests">
+        <h2>Hobbies and Interests</h2>
+        <p><strong>Hobbies:</strong> Carrom</p>
+        <p><strong>Favorite Activities:</strong> Watching movies</p>
+        <p><strong>Favorite Movie:</strong> Harry Potter</p>
+    </div>
+
 </div>
 
 </body>
