--- a/main.html
+++ b/main.html
@@ -60,7 +60,7 @@
         <p>Discord: dhurkeshb</p>
         <p>LinkedIn: <a href="https://linkedin.com/in/dhurkeshb">linkedin.com/in/dhurkeshb</a></p>
         <p>GitHub: <a href="https://github.com/Dhurkesh-B">Github.com/Dhurkesh-B</a></p>
-        <p>email id: <a dhurkeshmyself@gmail.com</a></p>
+        <p>email id: dhurkeshmyself@gmail.com</p>
         <p>Location: Chennai</p>
     </div>
 
